--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2089,8 +2089,10 @@ input, select, textarea {
 			}
 
 			.image.thumb:hover:before {
-				background: url("images/overlay.png"), url("images/overlay.png");
-				opacity: 1.0;
+				/* background: url("images/overlay.png"), url("images/overlay.png"); */
+				transition: 1s;
+				background-color: #2d33e3;
+				opacity: 0.5;
 			}
 
 		.image img {
