--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2217,7 +2217,7 @@ input, select, textarea {
 		ul.labeled-icons li {
 			line-height: 1.75em;
 			margin: 1.5em 0 0 0;
-			padding-left: 2.25em;
+			/* padding-left: 2.25em; */
 			position: relative;
 		}
 
