--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2040,17 +2040,17 @@ input, select, textarea {
 	}
 
 		.image:before {
-			-moz-transition: opacity 0.2s ease-in-out;
+			/* -moz-transition: opacity 0.2s ease-in-out;
 			-webkit-transition: opacity 0.2s ease-in-out;
 			-ms-transition: opacity 0.2s ease-in-out;
-			transition: opacity 0.2s ease-in-out;
+			transition: opacity 0.2s ease-in-out; */
 			/* background: url("images/overlay.png"); */
 			border-radius: 0.35em;
 			content: '';
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.5;
+			/* opacity: 0.5; */
 			position: absolute;
 			top: 0;
 			width: 100%;
@@ -2060,7 +2060,7 @@ input, select, textarea {
 			text-align: center;
 		}
 
-			.image.thumb:after {
+			/* .image.thumb:after {
 				-moz-transition: opacity 0.2s ease-in-out;
 				-webkit-transition: opacity 0.2s ease-in-out;
 				-ms-transition: opacity 0.2s ease-in-out;
@@ -2082,18 +2082,18 @@ input, select, textarea {
 				text-decoration: none;
 				top: 50%;
 				white-space: nowrap;
-			}
+			} */
 
-			.image.thumb:hover:after {
+			/* .image.thumb:hover:after {
 				opacity: 1.0;
-			}
+			} */
 
-			.image.thumb:hover:before {
-				/* background: url("images/overlay.png"), url("images/overlay.png"); */
+			/* .image.thumb:hover:before {
+				background: url("images/overlay.png"), url("images/overlay.png");
 				transition: 1s;
 				background-color: #2d33e3;
 				opacity: 0.5;
-			}
+			} */
 
 		.image img {
 			border-radius: 0.35em;
